--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,6 +14,7 @@
 @import './components/hero.css';
 @import './components/blog.css';
 @import './components/post-list.css';
+@import './components/related-posts.css';
 @import './components/article.css';
 @import './components/search.css';
 @import './components/footer.css';
