--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -28,6 +28,7 @@
   <!-- <script>
     var _paq = window._paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['disableCookies']);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function () {
@@ -38,7 +39,7 @@
       g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
     })();
   </script> -->
-
+  
   <script>
     var _paq = window._paq = window._paq || [];
     /* 1. DISABLE COOKIES (Privacy Mode) */
